# language-detector

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yaml
ai/notebooks/: testing_the_model.ipynb  training_the_model.ipynb
iac/modules/common/: ecs_cluster.tf  outputs.tf  variables.tf
iac/modules/lambda/: lambda.tf  variables.tf
iac/modules/service/: alb.tf  ecr.tf  ecs_service.tf  push_github_api.tf  push_image.tf  roles.tf  variables.tf
iac/prd/: main.tf  variables.tf  versions.tf
requirements/: common.txt
scripts/: build_lambda.py
src/: .gitignore  detector.py  env.py
src/language-detector/: lambda.py  requirements.txt
src/layers/: .gitignore  build-layer.sh
src/routers/: health.py  translate.py
src/util/: file.py  logger.py
