[tool.poetry]
name = "language-detector"
version = "0.1.0"
description = ""
authors = ["Gabriel Richter <gabrielrih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
